# BMPF

./: CMakeLists.txt  Doxyfile  README.md
config/dh/: kuka_six.json  ur10.json
config/murdf/: 4robots.json  4robots_low_vel.json  demo_scene.json  demo_scene2.json  demo_scene_low_vel.json
config/urdf/: kuka_six.urdf  kuka_six_low_vel.urdf  sphere.urdf  tetris_1.urdf  tetris_2.urdf  tetris_3.urdf  tetris_4.urdf  ur10.urdf
matlab/optimization/: exp_1_reports.json  (+4 more)
project/core/: CMakeLists.txt
project/core/collider/: CMakeLists.txt
project/core/collider/include/: solid_collider.h  solid_sync_collider.h
project/core/collider/include/base/: collider.h  solid_3d_object.h  stl_shape.h
project/core/collider/src/: solid_collider.cpp  solid_sync_collider.cpp
project/core/collider/src/base/: solid_3d_object.cpp  stl_shape.cpp
project/core/collider/test/: test_solid_collision.cpp
project/core/gl_scene/: CMakeLists.txt
project/core/gl_scene/include/: camera.h  gl_scene.h  qt_gl_drawer.h  qt_gl_widget.h
project/core/gl_scene/src/: camera.cpp  demo_gl_scene.cpp  gl_scene.cpp  qt_gl_drawer.cpp  qt_gl_widget.cpp
project/core/misc/: CMakeLists.txt
project/core/misc/include/: count_down_latch.h  log.h  matrix_math.h  safe_ptr.h  state.h
project/core/misc/src/: state.cpp
project/core/monotone_cubic_interpolation/: CMakeLists.txt  ReadMe.md
project/core/monotone_cubic_interpolation/tests/: monotone_cubic_test_5.cpp
project/core/robot/: CMakeLists.txt
project/core/robot/include/: dh_robot.h  urdf_robot.h
project/core/robot/include/base/: joint.h  joint_params.h  link.h  robot.h
project/core/robot/src/: dh_robot.cpp  urdf_robot.cpp
project/core/robot/src/base/: joint_params.cpp  link.cpp  robot.cpp
project/core/robot/test/: test_dh.cpp  test_io.cpp  test_urdf_robot.cpp
project/core/scene/: CMakeLists.txt
project/core/scene/include/: scene.h
project/core/scene/src/: scene.cpp
project/core/solid3/: README.md
project/core/solid3/doc/: solid3.texi
project/core/solid3/examples/: README.txt
project/core/solid3/include/qhull/: user.h
project/core/solid3/src/qhull/: geom2.c  global.c  merge.c  qhull.h  rbox.c
project/core/urdf_reader/: CMakeLists.txt  ReadMe.md  mainpage.dox
project/core/urdf_reader/include/urdf/: urdfdom_compatibility.h
project/core/urdf_reader/src/: model.cpp
project/core/urdf_reader/test/: fail_pr2_desc_no_filename_in_mesh.urdf  pr2_desc.urdf  test_robot_model_parser.cpp  test_robot_model_parser.launch
project/find_path/: CMakeLists.txt
project/find_path/demo/: CMakeLists.txt  ReadMe.md
project/find_path/demo/src/: demo_continuous_path_finding.cpp  demo_continuous_path_finding_2.cpp  demo_dh_robot.cpp  demo_mr_path_finding.cpp  demo_mr_path_finding_2.cpp  demo_path_finding.cpp  demo_path_finding_2.cpp  demo_urdf_robot.cpp
project/find_path/find_path_core/: CMakeLists.txt
project/find_path/find_path_core/demo/: free_point_finding.cpp
project/find_path/find_path_core/include/: all_directions_path_finder.h  one_direction_ordered_path_finder.h  one_direction_path_finder.h  one_direction_sync_path_finder.h
project/find_path/find_path_core/include/base/: grid_path_finder.h  node_grid_path_finder.h  path_finder.h  path_node.h
project/find_path/find_path_core/src/: all_directions_path_finder.cpp  one_direction_ordered_path_finder.cpp  one_direction_path_finder.cpp  one_direction_sync_path_finder.cpp
project/find_path/find_path_core/src/base/: grid_path_finder.cpp  node_grid_path_finder.cpp  path_finder.cpp
project/find_path/find_path_core/test/: test_all_directions_path_finder.cpp  test_one_direction_ordered_path_finder.cpp  test_one_direction_path_finder.cpp  test_one_direction_sync_path_finder.cpp
project/find_path/find_path_generator/: CMakeLists.txt
project/find_path/find_path_generator/include/: generator.h
project/find_path/find_path_generator/src/: exp_1.cpp  exp_2.cpp  generator.cpp
project/find_path/smart_path_finding/: CMakeLists.txt
project/find_path/smart_path_finding/include/: continuous_path_finder.h  multirobot_path_finder.h
project/find_path/smart_path_finding/src/: continuous_path_finder.cpp  multirobot_path_finder.cpp
project/find_path/smart_path_finding/test/: test_continuous_path_finder.cpp  test_continuous_path_finder_2.cpp  test_multirobot_path_finder.cpp  test_multirobot_path_finder_2.cpp
project/find_trajectory/: CMakeLists.txt
project/find_trajectory/demo/: demo_trajectory_finding.cpp  demo_trajectory_finding_2.cpp
project/find_trajectory/include/: monotone_trajectory_finder.h
project/find_trajectory/src/: monotone_trajectory_finder.cpp
project/find_trajectory/test/: test_monotone_trajectory_finder.cpp  test_monotone_trajectory_finder_2.cpp
project/network/servers/: CMakeLists.txt
project/network/servers/console/: console_continuous_pf_server.cpp  console_multirobot_pf_server.cpp  console_path_optimizing_server.cpp  console_trajectory_finding_server.cpp
project/network/servers/demo/: demo_continuous_pf_server.cpp  demo_multirobot_pf_server.cpp  demo_path_optimizing_server.cpp  demo_trajectory_finding_server.cpp
project/network/servers/include/: base_server.h  continuous_pf_server.h  multirobot_pf_server.h  path_finding_server.h  path_optimising_server.h  trajectory_finding_server.h
project/network/servers/src/: base_server.cpp  path_finding_server.cpp  path_optimising_server.cpp  trajectory_finding_server.cpp
project/optimize_path/: CMakeLists.txt
project/optimize_path/include/: optimize_generator.h  optimize_path.h  optimize_path_median.h  optimize_path_newton.h
project/optimize_path/src/: exp_1.cpp  exp_2.cpp  optimize_generator.cpp  optimize_path.cpp  optimize_path_median.cpp  optimize_path_newton.cpp
project/scene_editor/: CMakeLists.txt  scene_editor.cpp
project/scene_editor/include/: box_drawer.h  scene_editor_drawer.h  scene_editor_main_window.h  scene_editor_widget.h  scene_editor_window.h
project/scene_editor/src/: box_drawer.cpp  scene_editor_drawer.cpp  scene_editor_main_window.cpp  scene_editor_widget.cpp  scene_editor_window.cpp
(+43 files in other folders)
